--- a/movie-quotes/index.html
+++ b/movie-quotes/index.html
@@ -3,6 +3,10 @@
 	<head>
 		<title>Movie Quotes</title>
 		<link rel="stylesheet" type="text/css" href="css/styles.css">
+			<style>
+				h1 { color:white;background-color: #2ea36e;
+
+				}
 
 	</head>
 	<body>
@@ -31,7 +35,7 @@
 		</section>
 
 		<section>
-<br> <p> Dr. Peter Venkman: "This city is headed for a disaster of biblical proportions."</p>
+<p> Dr. Peter Venkman: "This city is headed for a disaster of biblical proportions."</p>
 <p> Mayor: "What do you mean, 'biblical?'"</p>
 <p>Dr Ray Stantz: "What he means is Old Testament, Mr. Mayor, real wrath of God type stuff."</p>
 <p>Dr. Peter Venkman: "Exactly."</p>
@@ -39,17 +43,17 @@
 <p>Dr. Egon Spengler: "Forty years of darkness! Earthquakes, volcanoes..."</p>
 <p> Winston Zeddemore: "The dead rising from the grave!"</p>
 <p> Dr. Peter Venkman: "Human sacrifice, dogs and cats living together... mass hysteria!" </p>
-			<p> Mayor: "All right, all right! I get the point!"</p> </br>
+<p> Mayor: "All right, all right! I get the point!"</p>
 		</section>
 
 		<section>
 
-<br> <p> [clearing away tables in the dining room to make room for the ghost trap]</p>
+<p> [clearing away tables in the dining room to make room for the ghost trap]</p>
 <p>Dr Ray Stantz: I've gotta get this in the clear...!</p>
 <p>Dr Ray Stantz: Wait, wait, wait! I've always wanted to do this...</p>
 <p>[He yanks a tablecloth off of a table, overturning and shattering everything except the centerpiece in the middle]</p>
 <p>Dr. Peter Venkman: [triumphantly] And the flowers are still standing!
-			</p> </br>
+</p>
 
 		</section>
 
