--- a/movie-quotes/index.html
+++ b/movie-quotes/index.html
@@ -4,9 +4,10 @@
 		<title>Movie Quotes</title>
 		<link rel="stylesheet" type="text/css" href="css/styles.css">
 			<style>
-				h1 { color:white;background-color: #2ea36e;
+				h1 { color:white;background-color: #2ea36e; 
 
 				}
+			</style>
 
 	</head>
 	<body>
@@ -26,16 +27,17 @@
 		</section>
 
 		<section>
-<p> Dr. Peter Venkman: "What I'd really like to do is talk to Dana. Dana? It's Peter."</p>
+<br> <p> Dr. Peter Venkman: "What I'd really like to do is talk to Dana. Dana? It's Peter."</p>
 <p>Dana Barrett: "There is no Dana, there is only Zuul."</p>
 <p>Dr. Peter Venkman: "Oh, Zuulie, you nut, now c'mon. Just relax, c'mon. I want to talk to Dana. Dana, Dana. "Can I talk to Dana?</p>
 <p> Dana Barrett: "in an inhuman demonic voice There is no Dana, only Zuul!"</p>
-<p> Dr. Peter Venkman: "What a lovely singing voice you must have."</p>
+<p> Dr. Peter Venkman: "What a lovely singing voice you must have."</p> </br>
 
-		</section>
+		</section><hr width="386" align="left">
 
-		<section>
-<p> Dr. Peter Venkman: "This city is headed for a disaster of biblical proportions."</p>
+
+		</hr><section>
+<br> <p> Dr. Peter Venkman: "This city is headed for a disaster of biblical proportions."</p>
 <p> Mayor: "What do you mean, 'biblical?'"</p>
 <p>Dr Ray Stantz: "What he means is Old Testament, Mr. Mayor, real wrath of God type stuff."</p>
 <p>Dr. Peter Venkman: "Exactly."</p>
@@ -43,17 +45,17 @@
 <p>Dr. Egon Spengler: "Forty years of darkness! Earthquakes, volcanoes..."</p>
 <p> Winston Zeddemore: "The dead rising from the grave!"</p>
 <p> Dr. Peter Venkman: "Human sacrifice, dogs and cats living together... mass hysteria!" </p>
-<p> Mayor: "All right, all right! I get the point!"</p>
-		</section>
+<p> Mayor: "All right, all right! I get the point!"</p></br>
+		</section><hr width="386" align="left">
 
-		<section>
+		</hr><section>
 
-<p> [clearing away tables in the dining room to make room for the ghost trap]</p>
+<br><p> [clearing away tables in the dining room to make room for the ghost trap]</p>
 <p>Dr Ray Stantz: I've gotta get this in the clear...!</p>
 <p>Dr Ray Stantz: Wait, wait, wait! I've always wanted to do this...</p>
 <p>[He yanks a tablecloth off of a table, overturning and shattering everything except the centerpiece in the middle]</p>
 <p>Dr. Peter Venkman: [triumphantly] And the flowers are still standing!
-</p>
+</p></br>
 
 		</section>
 
