--- a/lyrics-excercise/index.html
+++ b/lyrics-excercise/index.html
@@ -119,6 +119,13 @@
 <p>Talking bout a real love</p></br>
 	</section>
 
-	<footer>album: Channel Orange (2012)</footer>
+	<img src="https://images-na.ssl-images-amazon.com/images/I/51TEKKy6EqL._SL1500_.jpg" width= "200" height= "200">
+<hr>
+	<footer>
+		
+	album: <a href="https://www.youtube.com/watch?v=0XCQNpjWmRE">Channel Orange</a>(2012)
+<p> Efua Osei </p>
+<p>Interacton Foundations, 2019 </p>
+</footer></hr>
 </body>
 </html>
