--- a/lyrics-exercise/index.html
+++ b/lyrics-exercise/index.html
@@ -125,7 +125,7 @@
 		
 	album: <a href="https://www.youtube.com/watch?v=0XCQNpjWmRE">Channel Orange</a>(2012)
 <p> Efua Osei </p>
-<p>Interacton Foundations, 2019 </p>
+<p>Interaction Foundations, 2019 </p>
 </footer></hr>
 </body>
 </html>
