--- a/lyrics-exercise/index.html
+++ b/lyrics-exercise/index.html
@@ -14,14 +14,13 @@
 
 	<section>
 		<h3>[Frank Ocean]</h3>
-		<br><p>Too many bottles of this wine we can't pronounce</p>
+		<p>Too many bottles of this wine we can't pronounce</p>
 <p>Too many bowls of that green, no Lucky Charms</p>
 <p>The maids come around too much</p>
 <p>Parents ain't around enough</p>
 <p>Too many joy rides in daddy's Jaguar</p>
 <p>Too many white lies and white lines</p>
 <p>Super rich kids with nothing but fake friends</p>
-</br>
 
 <br>
 <p>Start my day up on the roof</p>
