--- a/lyrics-exercise/index.html
+++ b/lyrics-exercise/index.html
@@ -14,14 +14,14 @@
 
 	<section>
 		<h3>[Frank Ocean]</h3>
-		<br><p>Too many bottles of this wine we can't pronounce</p>
+		<p>Too many bottles of this wine we can't pronounce</p>
 <p>Too many bowls of that green, no Lucky Charms</p>
 <p>The maids come around too much</p>
 <p>Parents ain't around enough</p>
 <p>Too many joy rides in daddy's Jaguar</p>
 <p>Too many white lies and white lines</p>
 <p>Super rich kids with nothing but fake friends</p>
-		</br>
+
 <br>
 <p>Start my day up on the roof</p>
 <p>There's nothing like this type of view</p>
@@ -73,18 +73,7 @@
 	</section>
 	<section>
 		<h3>[Frank Ocean]</h3>
-		<p>Polo sweats and Hermes blankets</p>
-<p>Them label hoes be stealing my shit</p>
-<p>And all they clothes revealing they tits</p>
-<p>Pills, high enough to touch the rim in that bitch</p>
-<p>We party in my living room</p>
-<p>Cause father is gone</p>
-<p>And he left me this empire</p>
-<p>That runs on its own</p>
-<p>So all I got to do is whatever the fuck I want</p>
-<p>All we ever do is whatever the fuck we want</p>
-
-<br><p>
+		<p>
 	We end our day up on the roof</p>
 <p>I say I'll jump, I never do</p>
 <p>But when I'm drunk I act a fool</p>
@@ -98,7 +87,7 @@
 <p>My silver spoon has fed me good</p>
 <p>A million one, a million cash</p>
 <p>Close my eyes and feel the crash
-</p></br>
+</p>
 
 <br>
 <p>Too many bottles of this wine we can't pronounce</p>
