--- a/box-model/index.html
+++ b/box-model/index.html
@@ -12,14 +12,22 @@
 <body>
 
 		<section class="Intro"> 
+		
 		<div id="Title"><h1>Page Intro</h1>
+		
 		<h2>Subheading that <i>really</i> imresses the user.</h2>
-		</div></section>
+		</div>
+
+		</section>
 
 		<section class="one">
+			<!-- div for consistent column wdth -->
+			<div>
 			
 			<div id="parag1-title"><h3>Section Title</h3></div>
-			<div id="parag1">
+			
+		<div id="parag1">
+		
 		<img src="images/JerkSpicedGrilledCorn_c_Anisha-Sisodia-LEDE.png" alt id="large-pic">
 
 		<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis accumsan vitae massa quis euismod. Vivamus pulvinar posuere turpis congue laoreet. Suspendisse potenti. Sed fringilla, ex et dictum efficitur, augue nunc cursus elit, non lacinia diam ante et ipsum. Sed non commodo dolor. Sed vehicula aliquet nisl, sit amet convallis dolor posuere sed. Fusce consectetur quam diam, nec facilisis lectus congue non. Pellentesque sollicitudin mollis tempor. Vivamus mattis at quam a pretium. Aenean eget scelerisque mi, non rutrum felis. Maecenas facilisis imperdiet justo, ut sodales purus blandit vitae. Proin pellentesque laoreet lobortis. Sed feugiat ipsum eget lorem tempus commodo. </p>
@@ -27,20 +35,83 @@
 		<p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur lobortis, nisi pretium hendrerit tincidunt, ante erat tempor purus, id condimentum purus dolor ac urna. Nullam imperdiet, ipsum vitae posuere euismod, justo elit auctor augue, at molestie est nulla ut lorem. Nam eu aliquam ipsum, a pretium enim. Nulla non consectetur tortor, ac placerat turpis. Nam lobortis libero sed varius pellentesque. In dapibus arcu ut mauris accumsan, in tincidunt risus eleifend. Cras ut nulla vel eros iaculis rutrum eget sed felis.</p>
 
 		<p>Morbi et maximus ante, eu tincidunt ligula. Suspendisse elementum, leo quis sodales vehicula, velit enim hendrerit risus, vitae porttitor quam risus quis erat. Maecenas sed tellus et justo commodo tempor. Mauris augue nibh, varius nec faucibus sit amet, porttitor ut risus. Maecenas dapibus tellus felis, quis interdum magna lobortis at. Nam vel ornare turpis. Nulla facilisi. Morbi velit justo, vehicula vel tristique vitae, finibus sit amet eros. Quisque pellentesque erat quis enim vulputate posuere. Aliquam erat volutpat. Curabitur gravida mi at enim varius dignissim. Morbi vitae turpis ut ligula tincidunt varius eget ac lorem. Cras laoreet augue augue, non sodales libero elementum ultrices.</p>
-	</div></section>
+		</div>
+		
+		</div>
+		
+		</section>
+
+		
+
+
+
+
+
+
+
+
 
 		<section class="two">
+		<div>
+			
 			<h3>Section Title</h3>
+			<div>
+			<ul>
+				<li>
+					<img src="images/Corn-Atomic-Orange-CN186-LSS--000_5775.png" alt id="small-pic">
+					<h4>Photo Title</h4>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis accumsan vitae massa quis euismod.</p>
+				</li><!-- 
+				 --><li>
+					<img src="images/mexican-street-corn-off-the-cob-recipe-photos-tablefortwoblog-1.png" alt id="small-pic">
+					<h4>Photo Title</h4>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis accumsan vitae massa quis euismod.</p>
+				</li><!-- 
+				--><li>
+					<img src="images/Butter-Bath-Corn-on-the-Cob-Hot-Honey_026.png" alt id="small-pic">
+					<h4>Photo Title</h4>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis accumsan vitae massa quis euismod.</p>
+				</li><!-- 
+				--><li>
+					<img src="images/corn-1296x728-feature.png" alt id="small-pic">
+					<h4>Photo Title</h4>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis accumsan vitae massa quis euismod.</p>
+				</li><!-- 
+				--><li>
+					<img src="images/52622-PK-P1.png" alt id="small-pic">
+					<h4>Photo Title</h4>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis accumsan vitae massa quis euismod.</p>
+				</li><!-- 
+				--><li>
+					<img src="images/grilled-corn-jpg-1527101903.png" alt id="small-pic">
+					<h4>Photo Title</h4>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis accumsan vitae massa quis euismod.</p>
+				</li>	
+			</ul>
+		</div>
 
+
+			</div>
+			
 			</section>
-		<section class="three"></section>
+
+
+		<section class="three">
+			
 			<h3>Section Title</h3>
+			
+			<div>
 
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis accumsan vitae massa quis euismod. Vivamus pulvinar posuere turpis congue laoreet. Suspendisse potenti. Sed fringilla, ex et dictum efficitur, augue nunc cursus elit, non lacinia diam ante et ipsum. Sed non commodo dolor. Sed vehicula aliquet nisl, sit amet convallis dolor posuere sed.</p>
 
-
+			</div>
+			
+			</section>
 </body>
 
-<footer> Copyright 2018</footer>
+<footer> 
+	<div>
+	© Copyright 2018</footer>
+	</div>
 
 </html>
