--- a/buttons/index.html
+++ b/buttons/index.html
@@ -82,4 +82,10 @@
 		</div>	
 
 	</body>
+<br>
+<hr></hr>
+	<footer>
+	Designed by: Efua Osei
+	<p>Interaction Foundations (2019)</p></footer>
+</br>
 </html>
