--- a/buttons/index.html
+++ b/buttons/index.html
@@ -83,9 +83,8 @@
 
 	</body>
 <br>
-<hr></hr>
 	<footer>
-	Designed by: Efua Osei
+	<p>Designed by: Efua Osei</p>
 	<p>Interaction Foundations (2019)</p></footer>
 </br>
 </html>
