--- a/buttons/index.html
+++ b/buttons/index.html
@@ -25,15 +25,15 @@
 			</div>
 
 			<div class="button_container">
-						<a href="https://hulkhogan.com/" target="_blank" id="btn_hulk-hogan"><!-- <img src="images/hulk.png"> --></a>
+				<a href="https://hulkhogan.com/" target="_blank" id="btn_hulk-hogan"><img src="images/hulkyellow.png"></a>
 			</div>
 			
 			<div class="button_container">
-				<a href="https://www.apple.com/" target="_blank" id="btn_apple"><!-- <img src="images/Apple_logo_grey.png"> --></a>
+				<a href="https://www.apple.com/" target="_blank" id="btn_apple"><img src="images/Apple_logo_grey.png"></a>
 			</div>
 
 			<div class="button_container">
-				<a href="https://www.lyft.com/" target="_blank" id="btn_lyft"></a>
+				<a href="https://www.lyft.com/" target="_blank" id="btn_lyft"><img src="images/Lyft_Logo_Spot_color.png"></a>
 			</div>
 
 			<div class="button_container">
@@ -41,7 +41,7 @@
 			</div>
 
 			<div class="button_container">
-				<a href="https://www.instagram.com/" target="_blank" id="btn_insta"></a>
+				<a href="https://www.instagram.com/" target="_blank" id="btn_insta"><img src="images/JFyofc-logo-instagram-background-png.png"></a>
 			</div>
 
 			<div class="button_container">
@@ -54,7 +54,7 @@
 			</div>
 
 			<div class="button_container">
-				<a href="https://www.fitbit.com/home" target="_blank" id="btn_fitbit"></a>
+				<a href="https://www.fitbit.com/home" target="_blank" id="btn_fitbit"><img src="images/fitbit-icon-20.jpg"></a>
 			</div>
 
 			<div class="button_container">
@@ -62,29 +62,26 @@
 			</div>
 
 			<div class="button_container">
-				<a href="https://www.stjude.org/" target="_blank" id="btn_jude"></a>
+				<a href="https://www.stjude.org/" target="_blank" id="btn_jude"><img src="images/st jude red.png"></a>
 			</div>
 
 			<div class="button_container">
-				<a href="https://thecolorrun.com/" target="_blank" id="btn_color-run"></a>
+				<a href="https://thecolorrun.com/" target="_blank" id="btn_color-run"><img src="images/colorrunog.png"></a>
 			</div>
 
 			<div class="button_container">
-				<a href="https://www.coca-cola.com/" target="_blank" id="btn_coca-cola"></a>
+				<a href="https://www.coca-cola.com/" target="_blank" id="btn_coca-cola"><img src="images/coca-cola-polar-bear-bottle.png"></a>
+				
 			</div>
 			
 
 			<div class="button_container">
-				<a href="https://www.nbc.com/the-tonight-show" target="_blank" id="btn_tonight-show"></a>
+				<a href="https://www.nbc.com/the-tonight-show" target="_blank" id="btn_tonight-show"><img src="images/tonight-show.png"></a>
 			</div>
 
 
 		</div>	
 
 	</body>
-<br>
-	<footer>
-	<p>Designed by: Efua Osei</p>
-	<p>Interaction Foundations (2019)</p></footer>
-</br>
+
 </html>
