--- a/postcards/responsive/index.html
+++ b/postcards/responsive/index.html
@@ -2,12 +2,20 @@
 <html>
 <head>
 	<title>Starting Document</title>
+
+<style type="text/css">
+	a {
+		position: absolute;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		left: 0;
+	}
+</style>
 </head>
-<a href="postcardone.html">
 <body>
 
-
-
+<a href="postcardone.html"></a>
 </body>
-</a>
+
 </html>
