--- a/postcards/responsive/postcardthree.html
+++ b/postcards/responsive/postcardthree.html
@@ -16,7 +16,7 @@
 		<div id="megtheestallion">
 			
 			<div id="message">
-				"When you bein real, you ain't worried bout how fake"
+				"When you bein real, you ain't worried bout who fake"
 			</div>
 		
 		<div id="attribution">-Megan Thee Stallion</div>
