--- a/microsite/www/index.html
+++ b/microsite/www/index.html
@@ -26,33 +26,35 @@
 
 	<div id="headerbar">
 		<h1>Hayao Miyazaki</h1>
-		<h2>his life and his craft</h2>
+		<h4>HM</h4>
 		
 		<div id="navigation-tabs">
 			<ul>
-  				<li><a href="www/index.html">Home</a></li>
- 				<li><a href="<!-- about.html -->">About</a></li>
-  				<li><a href="<!-- studio-ghibli.html -->">Studio Ghibili</a></li>
-  				<li><a href="<!-- message-and-style.html -->">Message and Style</a></li>
-  				<li><a href="<!-- sources.html -->">Sources</a></li>
+  				<li><a href="#header">Home</a></li>
+ 				<li><a href="#about">About</a></li>
+  				<li><a href="#studio-ghibli">Studio Ghibili</a></li>
+  				<li><a href="#message-and-style">Message and Style</a></li>
+  				<li><a href="#sources">Sources</a></li>
 			</ul>
 		</div>
 
 	</div>
 <section class="content">
 
-<section class="about">
+<section id="about">
 
 	<div id="section-title">
 		<h3>About</h3>
 	</div>
 	<div id="content">
-		Hayao Miyazaki (宮崎 駿 Miyazaki Hayao, born January 5, 1941) is a Japanese animator, filmmaker,	screenwriter, author, and manga artist. A co-founder of Studio Ghibli, a film and animation studio, he has attained international acclaim as a masterful storyteller and as a maker of animated featured films, and is widely regarded as one of the greatest animation filmmakers of all time.
+		<!-- <div id="picture1">
+		<img src="css/images/profile-miyazaki.png">
+	</div>  -->
+
+	Hayao Miyazaki (宮崎 駿 Miyazaki Hayao, born January 5, 1941) is a Japanese animator, filmmaker,	screenwriter, author, and manga artist. A co-founder of Studio Ghibli, a film and animation studio, he has attained international 	acclaim as a masterful storyteller and as a maker of animated featured films, and is widely regarded as one of the greatest animation filmmakers of all time.
 	</div>
 
-<!-- 	<div id="picture1">
-		<img src="css/images/profile-miyazaki.png">
-	</div> -->
+
 
 
 
@@ -60,23 +62,38 @@
 </section>
 
 
-<section class="studio-ghibli">
+<section id="studio-ghibli">
 <div id="Page-title">
 		<h3>Studio Ghibli</h3>
 		</div>
 	<div id="content">
+		
+	<div id="picture2">
+		<img src="css/images/miyazaki.png">
+	</div> 
+		
 		<p>Studio Ghibli, Inc. (Japanese: 株式会社スタジオジブリ) is a Japanese animation film studio based in Koganei, Tokyo, Japan. The studio is best known for its anime feature films, and has also produced several short films, television commercials, and one television film. It was founded on 15 June 1985, after the success of Nausicaä of the Valley of the Wind (1984), with funding by Tokuma Shoten. Studio Ghibli has also collaborated with video game studios on the visual development of several video games.</p>
 		
 		<p>Six of Studio Ghibli's films are among the 10 highest-grossing anime films made in Japan, with Spirited Away (2001) being the highest, grossing over US$360 million worldwide. Many of their works have won the Animage Anime Grand Prix award, and four have won the Japan Academy Prize for Animation of the Year. Five of Studio Ghibli's films have received Academy Award nominations. Spirited Away won the Golden Bear in 2002 and the Academy Award for Best Animated Feature Film in 2003. Totoro, a character from My Neighbor Totoro, is the studio's mascot.</p>
 
 		<p>On 3 August 2014, Studio Ghibli temporarily halted production following the retirement of director Hayao Miyazaki, who co-founded the studio with the late Isao Takahata. In February 2017, Toshio Suzuki announced that Miyazaki had come out of retirement again to direct a new feature film, How Do You Live?, with Studio Ghibli.</p>
-	</div>
-</section>
+	
 
-<section class="message-and-style">
+
+
+	</div>
+</section>	
+
+
+
+<section id="message-and-style">
 <div id="Page-title">
 		<h3>Message and Style</h3>
-		</div>
+		</div>	
+
+	<div id="picture3">
+		<img src="css/images/hayao-header2.png">
+	</div> 
 	<div id="content">
 		<p>Miyazaki's works are characterized by the recurrence of themes such as environmentalism, pacifism, feminism, love and family. His narratives are also notable for not pitting a hero against an unsympathetic antagonist.</p>
 
@@ -84,20 +101,32 @@
 
 		<p>Several of Miyazaki's films feature anti-war themes. Daisuke Akimoto of Animation Studies categorized Porco Rosso as "anti-war propaganda";he felt that the main character, Porco, transforms into a pig partly due to his extreme distaste of militarism. Akimoto also argues that The Wind Rises reflects Miyazaki's "antiwar pacifism", despite the latter stating that the film does not attempt to "denounce" war. Schellhase also identifies Princess Mononoke as a pacifist film due to the protagonist, Ashitaka; instead of joining the campaign of revenge against humankind, as his ethnic history would lead him to do, Ashitaka strives for peace. David Loy and Linda Goodhew argue that both Nausicaä of the Valley of the Wind and Princess Mononoke do not depict traditional evil, but the Buddhist roots of evil: greed, ill will, and delusion; according to Buddhism, the roots of evil must transform into "generosity, loving-kindness and wisdom" in order to overcome suffering, and both Nausicaä and Ashitaka accomplish this. When characters in Miyazaki's films are forced to engage in violence, it is shown as being a difficult task; in Howl's Moving Castle, Howl is forced to fight an inescapable battle in defense of those he loves, and it almost destroys him, though he is ultimately saved by Sophie's love and bravery.</p>
 
+	<div id="picture4">
+		<img src="css/images/DiMjtSHVAAAa7lr.jpg">
+	</div> 
+
 		<p>Suzuki described Miyazaki as a feminist in reference to his attitude to female workers. Miyazaki has described his female characters as "brave, self-sufficient girls that don't think twice about fighting for what they believe in with all their heart", stating that they may "need a friend, or a supporter, but never a saviour" and that "any woman is just as capable of being a hero as any man". Nausicaä of the Valley of the Wind was lauded for its positive portrayal of women, particularly the protagonist Nausicaä. Schellhase noted that the female characters in Miyazaki's films are not objectified or sexualized, and possess complex and individual characteristics absent from Hollywood productions. Schellhase also identified a "coming of age" element for the heroines in Miyazaki's films, as they each discover "individual personality and strengths". Gabrielle Bellot of The Atlantic wrote that, in his films, Miyazaki "shows a keen understanding of the complexities of what it might mean to be a woman". In particular, Bellot cites Nausicaä of the Valley of the Wind, praising the film's challenging of gender expectations, and the strong and independent nature of Nausicaä. Bellot also noted that Princess Mononoke's San represents the "conflict between selfhood and expression".</p>
 
-		<p>Miyazaki is concerned with the sense of wonder in young people, seeking to maintain themes of love and family in his films. Michael Toscano of Curator found that Miyazaki "fears Japanese children are dimmed by a culture of overconsumption, overprotection, utilitarian education, careerism, techno-industrialism, and a secularism that is swallowing Japan’s native animism". Schellhase wrote that several of Miyazaki's works feature themes of love and romance, but felt that emphasis is placed on "the way lonely and vulnerable individuals are integrated into relationships of mutual reliance and responsibility, which generally benefit everyone around them". He also found that many of the protagonists in Miyazaki's films present an idealized image of families, whereas others are dysfunctional. He felt that the non-biological family in Howl's Moving Castle (consisting of Howl, Sophie, Markl, the Witch of the Waste, and Heen) gives a message of hope: that those cast out by society can "find a healthy place to belong".</p>
+		<p>Miyazaki is concerned with the sense of wonder in young people, seeking to maintain themes of love and family in his films. Michael Toscano of Curator found that Miyazaki "fears Japanese children are dimmed by a culture of overconsumption, overprotection, utilitarian education, careerism, techno-industrialism, and a secularism that is swallowing Japan’s native animism". <div id="picture5"><img src="css/images/kikis-2-700x500.jpg "></div>   <div id="picture6"><img src="css/images/bw-miyazaki.png"></div>  Schellhase wrote that several of Miyazaki's works feature themes of love and romance, but felt that emphasis is placed on "the way lonely and vulnerable individuals are integrated into relationships of mutual reliance and responsibility, which generally benefit everyone around them". He also found that many of the protagonists in Miyazaki's films present an idealized image of families, whereas others are dysfunctional. He felt that the non-biological family in Howl's Moving Castle (consisting of Howl, Sophie, Markl, the Witch of the Waste, and Heen) gives a message of hope: that those cast out by society can "find a healthy place to belong".</p>
 
 	</div>
 </section>
 
-<section class="sources">
+<section id="sources">
 <div id="Page-title">
 		<h3>Sources</h3>
-		</div>
+</div>
+	<br>
 	<div id="content">
-		Hayao Miyazaki (宮崎 駿 Miyazaki Hayao, born January 5, 1941) is a Japanese animator, filmmaker,	screenwriter, author, and manga artist. A co-founder of Studio Ghibli, a film and animation studio, he has attained international acclaim as a masterful storyteller and as a maker of animated featured films, and is widely regarded as one of the greatest animation filmmakers of all time.
+		
+		<a href="https://en.wikipedia.org/wiki/Hayao_Miyazaki "> Hayao Miyazaki Wikipedia</a>
+
+		<br>
+
+		<a href="https://en.wikipedia.org/wiki/Studio_Ghibli">Studio Ghibli Wikipedia</a>
+	
 	</div>
+
 </section>
 
 </section>
@@ -108,7 +137,7 @@
 
 <footer>
 
-Creative Direction by Griffin Xu  Designed by Efua Osei 
+<b>Creative Direction</b> by Griffin Xu  <p><b>Designed</b> by Efua Osei </p>
 <p>Interaction Foundations 2019</p>
 
 
